force-app/main/default/objects/Inbound_Call_Monthly_Interval__c/Inbound_Call_Monthly_Interval__c.object-meta.xml
<CustomObject>
    <label>Inbound Call Interval</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Call Interval</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>