force-app/main/default/objects/Inbound_Call_Monthly_Interval__c/fields/Abandone_Calls_20Sec__c.field-meta.xml
<CustomField>
    <fullName>Abandone_Calls_20Sec__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Abandone Calls &lt;= 20 Sec</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>