force-app/main/default/objects/Inbound_Call_Monthly_Interval__c/fields/ACD_20_Sec__c.field-meta.xml
<CustomField>
    <fullName>ACD_20_Sec__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ACD &lt;= 20 Sec</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>