force-app/main/default/objects/Inbound_Call_Monthly_Interval__c/fields/ACD_5_Secs__c.field-meta.xml
<CustomField>
    <fullName>ACD_5_Secs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ACD &lt; 5 Secs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>