force-app/main/default/objects/Inbound_Call_Monthly_Interval__c/fields/AVG_Abandone__c.field-meta.xml
<CustomField>
    <fullName>AVG_Abandone__c</fullName>
    <defaultValue>&apos;00:00:00&apos;</defaultValue>
    <label>AVG Abandone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>