force-app/main/default/objects/Inbound_Call_Monthly_Interval__c/fields/AVG_Speed_Answer__c.field-meta.xml
<CustomField>
    <fullName>AVG_Speed_Answer__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AVG Speed Answer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>