force-app/main/default/objects/Inbound_Call_Monthly_Interval__c/fields/Call_Offered__c.field-meta.xml
<CustomField>
    <fullName>Call_Offered__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Call Offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>