force-app/main/default/objects/Inbound_Call_Monthly_Interval__c/fields/Daily_Count__c.field-meta.xml
<CustomField>
    <fullName>Daily_Count__c</fullName>
    <formula>IF (Call_Offered__c &gt; 0, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>