force-app/main/default/objects/Inbound_Call_Monthly_Interval__c/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <label>Interval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>08:00-08:15</fullName>
            </value>
            <value>
                <fullName>08:15-08:30</fullName>
            </value>
            <value>
                <fullName>08:30-08:45</fullName>
            </value>
            <value>
                <fullName>08:45-09:00</fullName>
            </value>
            <value>
                <fullName>09:00-09:15</fullName>
            </value>
            <value>
                <fullName>09:15-09:30</fullName>
            </value>
            <value>
                <fullName>09:30-09:45</fullName>
            </value>
            <value>
                <fullName>09:45-10:00</fullName>
            </value>
            <value>
                <fullName>10:00-10:15</fullName>
            </value>
            <value>
                <fullName>10:15-10:30</fullName>
            </value>
            <value>
                <fullName>10:30-10:45</fullName>
            </value>
            <value>
                <fullName>10:45-11:00</fullName>
            </value>
            <value>
                <fullName>11:00-11:15</fullName>
            </value>
            <value>
                <fullName>11:15-11:30</fullName>
            </value>
            <value>
                <fullName>11:30-11:45</fullName>
            </value>
            <value>
                <fullName>11:45-12:00</fullName>
            </value>
            <value>
                <fullName>12:00-12:15</fullName>
            </value>
            <value>
                <fullName>12:15-12:30</fullName>
            </value>
            <value>
                <fullName>12:30-12:45</fullName>
            </value>
            <value>
                <fullName>12:45-13:00</fullName>
            </value>
            <value>
                <fullName>13:00-13:15</fullName>
            </value>
            <value>
                <fullName>13:15-13:30</fullName>
            </value>
            <value>
                <fullName>13:30-13:45</fullName>
            </value>
            <value>
                <fullName>13:45-14:00</fullName>
            </value>
            <value>
                <fullName>14:00-14:15</fullName>
            </value>
            <value>
                <fullName>14:15-14:30</fullName>
            </value>
            <value>
                <fullName>14:30-14:45</fullName>
            </value>
            <value>
                <fullName>14:45-15:00</fullName>
            </value>
            <value>
                <fullName>15:00-15:15</fullName>
            </value>
            <value>
                <fullName>15:15-15:30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>