force-app/main/default/objects/Inbound_Call_Monthly_Interval__c/fields/SLA_80_20__c.field-meta.xml
<CustomField>
    <fullName>SLA_80_20__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SLA (%)80/20</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>