force-app/main/default/objects/Inbound_Call_Monthly_Interval__c/fields/Total_ACD_Calls__c.field-meta.xml
<CustomField>
    <fullName>Total_ACD_Calls__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total ACD Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>